# HyprRice

./: .README.md.kate-swp  .SRCINFO  AI_WORKFLOW_IMPLEMENTATION.md  AUTOCONFIG_GUIDE.md  AUTOCONFIG_SUMMARY.md  CHANGELOG.md  CODE_REVIEW_REPORT.md  COMPREHENSIVE_DEBUG_REPORT.md  COMPREHENSIVE_IMPROVEMENT_PLAN.md  CONTRIBUTING.md  CRITICAL_FIXES_SUMMARY.md  CURRENT_STATUS_AND_NEXT_STEPS.md  DUCKYCODER_UI_EXECUTION_COMPLETE.md  DUCKYCODER_V4_ANALYSIS_REPORT.md  DUCKYCODER_V4_COMPREHENSIVE_ANALYSIS.md  DUCKYCODER_V4_MASTER_REPORT.md  FINAL_STATUS_REPORT.md  IMPROVEMENTS_SUMMARY.md  INTERACTIVE_PREVIEW_IMPLEMENTATION.md  LICENSE  PKGBUILD  PLUGIN_SYSTEM_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  THEME_SYSTEM_SUMMARY.md  debug_info.json  debug_info_final.json  debug_info_new.json  debug_report.md  debug_report_final.md  debug_report_new.md  example_colors.conf  example_general.conf  example_plugins.conf  hyprrice_gui_wrapper.py  nonexistent_config.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  (+5 more)
.cursor/: Dockerfile
.cursor/plans/: hyprrice-analysis---improvements-83bfab7e.plan.md  install-bd2f6fe8.plan.md
.cursor/rules/: rules-hypr-rice-v1.mdc
.github/workflows/: hardware-validation.yml  python-ci.yml  release.yml
data/: default_config.yaml
docs/: README.md  STYLE_GUIDE.md  ai_workflow.md  api.md  plugins.md  security.md  user_guide.md
docs/development/: contributing.md
docs/hardware/: cpu_management.md
docs/howto/: troubleshooting.md
docs/reference/: plugin_api.md  theme_format.md
docs/tutorials/: quick_start.md
plugins/: notification_theming.py  terminal_theming.py
plugins/config/: plugin_configs.json
src/hyprrice/: __init__.py  __main__.py  ai_workflow.py  autoconfig.py  backup.py  backup_manager.py  cli.py  cli_plugins.py  config.py  debug.py  exceptions.py  gui.py  hardware_manager.py  history.py  main.py  main_gui.py  migration.py  performance.py  plugin_sandbox.py  plugins.py  security.py  utils.py  validation.py
src/hyprrice.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/hyprrice/gui/: __init__.py  ai_workflow_tab.py  autoconfig_wizard.py  backup_manager.py  backup_tab.py  config_editor.py  enhanced_main.py  modern_theme.py  package_options.py  plugin_manager.py  preferences.py  preview.py  tabs.py  theme_editor.py  theme_manager.py
src/hyprrice/hyprland/: animations.py  display.py  input.py  modular_config.py  windows.py  workspaces.py
src/hyprrice/plugins_builtin/: __init__.py  notification_theming.py
tests/: conftest.py  run_tests.py  test_ai_workflow.py  test_backup_paths.py  test_backup_system.py  test_cli.py  test_config.py  test_error_handling.py  test_gui.py  test_gui_integration.py  test_history.py  test_hyprland_integration.py  test_integration.py  test_performance.py  test_plugin_manager.py  test_plugin_system.py  test_qt_compatibility.py  test_sandbox.py  test_sourced_files.py  test_startup_flow.py  test_theme_manager.py  test_theme_preview.py  test_theme_security.py  test_ui_scaling.py  test_utils.py  test_windows_json.py
themes/: cyberpunk.hyprrice  minimal.hyprrice  palevioletred_soft_neon.hyprrice  pastel.hyprrice
web-ui/components/: CPUManager.tsx  GPUManager.tsx
